<resources>
    <string name="app_name">Mobile Calculator</string>
    <string name="error">ERROR</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">X</string>
    <string name="divide">÷</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="plusminus">+/−</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="clear">CE</string>
    <string name="backspace">⌫</string>
    <string name="clear_box">Clear the box?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty"></string>
    <string name="you_are_stupid">Really???</string>
</resources>
