<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:id="@+id/calcButtons"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TableRow
            android:layout_gravity="center_horizontal"
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/seven"
                android:text="@string/seven"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/eight"
                android:text="@string/eight"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/nine"
                android:text="@string/nine"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/divide"
                android:text="@string/divide"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow
            android:layout_gravity="center_horizontal"
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/four"
                android:text="@string/four"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/five"
                android:text="@string/five"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/six"
                android:text="@string/six"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/multiply"
                android:text="@string/multiply"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>

        </TableRow>

        <TableRow
            android:layout_gravity="center_horizontal"
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/one"
                android:text="@string/one"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/two"
                android:text="@string/two"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/three"
                android:text="@string/three"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/subtract"
                android:text="@string/subtract"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
        </TableRow>
        <TableRow
            android:layout_gravity="center_horizontal"
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/zero"
                android:text="@string/zero"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/point"
                android:text="@string/point"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/plusminus"
                android:text="@string/plusminus"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/add"
                android:text="@string/add"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:buttonBarStyle"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/clear"
                android:text="@string/clear"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/equals"
                android:text="@string/equals"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/backspace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:buttonBarButtonStyle"
                android:text="@string/backspace"
                android:onClick="onClick"
                android:textColor="@android:color/black"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:layout_above="@id/calcButtons"
        android:layout_alignParentTop="true">
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="64"
                android:padding="16dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorAccent"
                android:id="@+id/calcOutput"
                android:textAlignment="center"
                android:textSize="48sp"
                android:fontFamily="monospace"
                android:longClickable="true" />
        </ScrollView>
    </LinearLayout>
</RelativeLayout>